--- a/index.html
+++ b/index.html
@@ -111,55 +111,55 @@
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_2.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_2.jpg" alt="" />
-                            <div class="portfolio-box-caption">
+                            <!-- <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_3.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_3.jpg" alt="" />
-                            <div class="portfolio-box-caption">
+                            <!-- <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_6.jpg" alt="" />
-                            <div class="portfolio-box-caption">
+                            <!-- <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_9.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_9.jpg" alt="" />
-                            <div class="portfolio-box-caption">
+                            <!-- <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
                             </div>
-                        </a>
+ -->                        </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_11.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_11.jpg" alt="" />
-                            <div class="portfolio-box-caption">
+                            <!-- <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/nancy_10.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/nancy_10.jpg" alt="" />
-                            <div class="portfolio-box-caption p-3">
+                            <!-- <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                 </div>
